syntax = "proto3";
import "google/api/annotations.proto";

option csharp_namespace = "QuartzService.Protos";

service JobService {
	rpc AddJob (JobResponseModel) returns (JobKeyViewModel){
        option (google.api.http) = {
            post: "/api/job/new-job",
            body: "*"
        };
    };
    rpc GetJob (JobKeyViewModel) returns (JobResponseModel){
        option (google.api.http) = {
            get: "/api/job"
        };
    };
    rpc GetJobs (JobGroupNameRequest) returns (JobsResponseModel){
        option (google.api.http) = {
            get: "/api/jobs"
        };
    };
    rpc DeleteJob (JobKeyViewModel) returns (JobDeleteResponseMessage){
        option (google.api.http) = {
            delete: "/api/jobs",
            body: "*"
        };
    };
}

message JobDeleteResponseMessage {
}

message JobKeyViewModel {
    string jobKey = 1;
    string groupName = 2;
}

message JobGroupNameRequest {
    string groupName = 1;
}

message JobsResponseModel {
    repeated JobResponseModel jobs = 1;
}

message JobResponseModel {
    string jobKey = 1;
    string groupName = 2;
    repeated TriggerModel triggers = 3;
    string description = 4;
    string data = 5;
}

message TriggerModel {
    string triggerKey = 1;
    string groupName = 2;
    string cronExpression = 3;
    string description = 4;
}